--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <img src="ícones/imagem1.png" alt="New2">
     </button>
     <button class="button" onclick="openFile('new3.html')">
-      <img src="ícones/imagem1.png" alt="New3">
+      <img src="ícones/moto.png" alt="New3">
     </button>
   </div>
 </div>
