--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div class="buttons-container">
   <div class="buttons">
     <button class="button" onclick="openFile('food.html')">
-      <img src="ícones/imagem1.png" alt="Food">
+      <img src="ícones/roupa.png" alt="Food">
     </button>
     <button class="button" onclick="openFile('taxi.html')">
       <img src="ícones/imagem1.png" alt="Taxi">
