--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 <div class="buttons-container">
   <div class="buttons">
     <button class="button" onclick="openFile('food.html')">
-      <img src="ícones/roupa.png" alt="Food">
+      <img src="ícones/comida.png" alt="Food">
     </button>
     <button class="button" onclick="openFile('taxi.html')">
-      <img src="ícones/imagem1.png" alt="Taxi">
+      <img src="ícones/lojas.png" alt="Taxi">
     </button>
     <button class="button" onclick="openFile('taxi.html')">
-      <img src="ícones/imagem1.png" alt="Taxi">
+      <img src="ícones/roupa.png" alt="Taxi">
     </button>
   </div>
   <div class="buttons">
