--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
   <div class="buttons">
     <!-- Novos botões aqui -->
     <button class="button" onclick="openFile('new1.html')">
-      <img src="ícones/imagem1.png" alt="New1">
+      <img src="ícones/contrate.png" alt="New1">
     </button>
     <button class="button" onclick="openFile('new2.html')">
-      <img src="ícones/imagem1.png" alt="New2">
+      <img src="ícones/farmacia.png" alt="New2">
     </button>
     <button class="button" onclick="openFile('new3.html')">
       <img src="ícones/moto.png" alt="New3">
