--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <button class="button" onclick="openFile('food.html')">
       <img src="ícones/comida.png" alt="Food">
     </button>
-    <button class="button" onclick="openFile('taxi.html')">
-      <img src="ícones/lojas.png" alt="Taxi">
+    <button class="button" onclick="openFile('lojas.html')">
+      <img src="ícones/lojas.png" alt="Lojas">
     </button>
     <button class="button" onclick="openFile('taxi.html')">
       <img src="ícones/roupa.png" alt="Taxi">
