--- a/lojas.html
+++ b/lojas.html
@@ -1,153 +1,121 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Layout Ajustado para Dispositivos Móveis</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      background: linear-gradient(to right, #ffdf00, #002776);
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    .search {
-      position: relative;
-      padding: 10px;
-    }
-
-    .search input {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 20px;
-    }
-
-    .search i {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      color: white;
-    }
-
-    .slideshow {
-      height: 50vh;
-      width: 100%;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      z-index: 1;
-    }
-
-    .slideshow img {
-      max-width: 90%;
-      height: auto;
-      object-fit: cover;
-      margin: auto;
-    }
-
-    .buttons-container {
-      display: flex;
-      flex-direction: column; /* Organiza os botões em coluna */
-      align-items: center; /* Centraliza os botões horizontalmente */
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%; /* Garante que a linha ocupe a largura total */
-    }
-
-    .button {
-      width: 28%;
-      height: auto;
-      border: none;
-      border-radius: 500px;
-      background-color: transparent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-size: cover;
-    }
-
-    .button img {
-      max-width: 140%;
-      height: auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Lojas e Produtos</title>
+    <style>
+        :root {
+            --main-bg-color: #ffffff; /* Cor de fundo padrão branca. Você pode alterar essa cor para o valor RGB desejado. */
+            --main-text-color: #000000; /* Cor de texto padrão preta. Você pode alterar essa cor para o valor RGB desejado. */
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: var(--main-bg-color); /* Usando a variável de cor de fundo aqui. */
+            color: var(--main-text-color); /* Usando a variável de cor de texto aqui. */
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .item {
+            flex-basis: 45%;
+            margin: 10px;
+            text-align: center;
+        }
+        .item img {
+            width: 100%;
+            height: auto;
+            cursor: pointer;
+        }
+        .dark-mode {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+        }
+        /* Estilos para o carrossel de imagens */
+        .carousel {
+            display: flex;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            scroll-padding: 50%;
+            scroll-behavior: smooth;
+        }
+        .carousel img {
+            scroll-snap-align: center;
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
 
-<div class="search">
-  <input type="text" placeholder="Busca">
-  <i class="fa fa-search"></i>
+<!-- Carrossel de imagens -->
+<div class="carousel" id="carousel">
+    <img src="\slides\imagem1.png" alt="Slide 1">
+    <img src="\slides\imagem2.png" alt="Slide 2">
+    <img src="\slides\imagem3.png" alt="Slide 3">
+    <!-- Adicione mais imagens conforme necessário -->
 </div>
 
-  <div class="slideshow">
-    <img src="promo/promo1.jpg" alt="promo1">
-    <video controls>
-      <source src="promo/video1.mp4" type="video/mp4">
-      Seu navegador não suporta o elemento de vídeo.
-    </video>
-    <img src="promo/promo2.jpg" alt="promo2">
+<div class="container">
+    <!-- Exemplo de 3 logos de loja por fileira -->
+    <div class="item" onclick="openHtml('emporiobelezachic')">
+        <img src="\logos\emporiobelezachic.gif" alt="emporiobelezachic">
+        <p>emporiobelezachic</p>
+    </div>
+    <div class="item" onclick="openHtml('cdm')">
+        <img src="\logos\cdm.png" alt="cdm">
+        <p>cdm2</p>
+    </div>
+    <div class="item" onclick="openHtml('evc')">
+        <img src="\logos\evc.png" alt="evc">
+        <p>evc</p>
+    </div>
+  <div class="item" onclick="openHtml('pepearcondicionado')">
+      <img src="\logos\pepearcondicionado.png" alt="pepearcondicionado">
+      <p>pepearcondicionado</p>
   </div>
 
-  <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.slideshow img, .slideshow video');
+    <!-- Repita o bloco acima para cada conjunto de 3 logos de loja -->
 
-    function showSlide(index) {
-      slides.forEach((slide, i) => {
-        slide.style.display = i === index ? 'block' : 'none';
-      });
-    }
-
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % slides.length;
-      showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-      showSlide(currentSlide);
-    }
-
-    setInterval(nextSlide, 30000);
-  </script>
-
-<div class="buttons-container">
-  <div class="buttons">
-    <button class="button" onclick="openFile('food.html')">
-      <img src="ícones/comida.png" alt="Food">
-    </button>
-    <button class="button" onclick="openFile('lojas.html')">
-      <img src="ícones/lojas.png" alt="Lojas">
-    </button>
-    <button class="button" onclick="openFile('taxi.html')">
-      <img src="ícones/roupa.png" alt="Taxi">
-    </button>
-  </div>
-  <div class="buttons">
-    <!-- Novos botões aqui -->
-    <button class="button" onclick="openFile('new1.html')">
-      <img src="ícones/contrate.png" alt="New1">
-    </button>
-    <button class="button" onclick="openFile('new2.html')">
-      <img src="ícones/farmacia.png" alt="New2">
-    </button>
-    <button class="button" onclick="openFile('new3.html')">
-      <img src="ícones/moto.png" alt="New3">
-    </button>
-  </div>
 </div>
+
+<button class="dark-mode" onclick="toggleDarkMode()">Modo Escuro</button>
+
+<script>
+    function openHtml(productName) {
+        window.open(productName + '.html', '_blank');
+    }
+
+    function toggleDarkMode() {
+        let body = document.body;
+        let darkModeButton = document.querySelector('.dark-mode');
+        if (body.style.backgroundColor === 'rgb(255, 255, 255)') {
+            body.style.backgroundColor = 'rgb(0, 0, 0)';
+            body.style.color = 'rgb(255, 255, 255)';
+            darkModeButton.textContent = 'Modo Claro';
+        } else {
+            body.style.backgroundColor = 'rgb(255, 255, 255)';
+            body.style.color = 'rgb(0, 0, 0)';
+            darkModeButton.textContent = 'Modo Escuro';
+        }
+    }
+
+    // Código para o carrossel automático
+    let counter = 0;
+    let images = document.querySelectorAll('.carousel img');
+    setInterval(function() {
+        counter++;
+        if (counter === images.length) {
+            counter = 0;
+        }
+        let carousel = document.getElementById('carousel');
+        carousel.scrollLeft = images[counter].offsetLeft;
+    }, 3000); // Muda a imagem a cada 3 segundos
+</script>
 
 </body>
 </html>
