--- a/lojas.html
+++ b/lojas.html
@@ -54,28 +54,28 @@
 
 <!-- Carrossel de imagens -->
 <div class="carousel" id="carousel">
-    <img src="\slides\imagem1.png" alt="Slide 1">
-    <img src="\slides\imagem2.png" alt="Slide 2">
-    <img src="\slides\imagem3.png" alt="Slide 3">
+    <img src="\mercadolink\slides1.png" alt="Slide 1">
+    <img src="\mercadolink\slides1.png" alt="Slide 2">
+    <img src="\mercadolink\slides1.png" alt="Slide 3">
     <!-- Adicione mais imagens conforme necessário -->
 </div>
 
 <div class="container">
     <!-- Exemplo de 3 logos de loja por fileira -->
     <div class="item" onclick="openHtml('emporiobelezachic')">
-        <img src="\logos\emporiobelezachic.gif" alt="emporiobelezachic">
+        <img src="\lojas_logos\emporiobelezachic.gif" alt="emporiobelezachic">
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('cdm')">
-        <img src="\logos\cdm.png" alt="cdm">
+        <img src="\lojas_logos\cdm.png" alt="cdm">
         <p>cdm2</p>
     </div>
     <div class="item" onclick="openHtml('evc')">
-        <img src="\logos\evc.png" alt="evc">
+        <img src="\lojas_logos\evc.png" alt="evc">
         <p>evc</p>
     </div>
   <div class="item" onclick="openHtml('pepearcondicionado')">
-      <img src="\logos\pepearcondicionado.png" alt="pepearcondicionado">
+      <img src="\lojas_logos\pepearcondicionado.png" alt="pepearcondicionado">
       <p>pepearcondicionado</p>
   </div>
 
