--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
     <button class="button" onclick="openFile('food.html')">
       <img src="ícones/comida.png" alt="Comida">
     </button>
-    <button class="button" onclick="openFile('lojas.html')">
-      <img src="ícones/lojas.png" alt="Lojas">
-    </button>
+    <button class="button" onclick="openFile('all_pasta/lojas.html')">
+  <img src="ícones/lojas.png" alt="Lojas">
+</button>
     <button class="button" onclick="openFile('taxi.html')">
       <img src="ícones/roupa.png" alt="Taxi">
     </button>
