--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <button class="button" onclick="openFile('food.html')">
       <img src="ícones/comida.png" alt="Comida">
     </button>
-    <button class="button" onclick="openFile('all_pasta/lojas.html')">
+    <button class="button" onclick="openFile('todaslojas/lojas.html')">
   <img src="ícones/lojas.png" alt="Lojas">
 </button>
     <button class="button" onclick="openFile('taxi.html')">
