--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
     <button class="button" onclick="openFile('food.html')">
       <img src="ícones/comida.png" alt="Comida">
     </button>
+    <!-- Botão Lojas ajustado para abrir o arquivo dentro da pasta todaslojas -->
     <button class="button" onclick="openFile('todaslojas/lojas.html')">
-  <img src="ícones/lojas.png" alt="Lojas">
-</button>
+      <img src="ícones/lojas.png" alt="Lojas">
+    </button>
     <button class="button" onclick="openFile('taxi.html')">
       <img src="ícones/roupa.png" alt="Taxi">
     </button>
