--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <img src="ícones/comida.png" alt="Comida">
     </button>
     <!-- Botão Lojas ajustado para abrir o arquivo dentro da pasta todaslojas -->
-    <button class="button" onclick="openFile('todaslojas/lojas.html')">
+    <button class="button" onclick="openFile('todaslojas/lojass.html')">
       <img src="ícones/lojas.png" alt="Lojas">
     </button>
     <button class="button" onclick="openFile('taxi.html')">
