--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -1,66 +1,23 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Lojas e Produtos</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            /* Adiciona a imagem de fundo */
-            background-image: url('/fundos/fundo.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .item {
-            flex-basis: 45%;
-            margin: 10px;
-            text-align: center;
-        }
-        .item img {
-            width: 100%;
-            height: auto;
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
+# Importando os módulos necessários
+import os
 
-<div class="container" id="imageContainer">
-    <!-- As imagens serão adicionadas dinamicamente aqui com JavaScript -->
-</div>
+# Diretório onde estão as imagens
+diretorio_imagens = "emporiorbelezachic"
 
-<script>
-    function openHtml(productName) {
-        window.open('\logos\\' + productName + '.html', '_blank');
-    }
+# Obtendo a lista de arquivos no diretório
+arquivos = os.listdir(diretorio_imagens)
 
-    // Obtém a referência ao contêiner de imagens
-    const imageContainer = document.getElementById('imageContainer');
+# Filtrando apenas os arquivos de imagem (por extensão)
+imagens = [arquivo for arquivo in arquivos if arquivo.lower().endswith((".jpg", ".jpeg", ".png"))]
 
-    // Array com os nomes dos produtos e formato de imagem
-  const productNames = ['ss', '1', 'ss'];
-  const imageFormat = 'png'; // ou 'jpg', 'jpeg', 'gif', etc.
+# Gerando o HTML para exibir as imagens
+html = "<html><body>"
+for imagem in imagens:
+    html += f'<img src="{diretorio_imagens}/{imagem}" alt="{imagem}"><br>'
+html += "</body></html>"
 
-    // Adiciona as imagens dinamicamente ao contêiner
-    productNames.forEach(productName => {
-        const imagePath = `\\lojas\\emporiobelezachic\\${productName}.${imageFormat}`;
-        const itemDiv = document.createElement('div');
-        itemDiv.classList.add('item');
-        itemDiv.innerHTML = `
-            <img src="${imagePath}" alt="${productName}">
-            <p>${productName}</p>
-        `;
-        itemDiv.onclick = () => openHtml(productName);
-        imageContainer.appendChild(itemDiv);
-    });
-</script>
+# Escrevendo o HTML em um arquivo
+with open("index.html", "w") as arquivo_html:
+    arquivo_html.write(html)
 
-</body>
-</html>
+print("Arquivo index.html gerado com sucesso!")
