--- a/todaslojas/lojas.html
+++ b/todaslojas/lojas.html
@@ -52,26 +52,26 @@
 <body>
 
 <div class="carousel" id="carousel">
-    <img src="/meuProjeto/slides/imagem1.png" alt="Slide 1">
-    <img src="/meuProjeto/slides/imagem2.png" alt="Slide 2">
-    <img src="/meuProjeto/slides/imagem3.png" alt="Slide 3">
+    <img src="slides/imagem1.png" alt="Slide 1">
+    <img src="slides/imagem2.png" alt="Slide 2">
+    <img src="slides/imagem3.png" alt="Slide 3">
 </div>
 
 <div class="container">
     <div class="item" onclick="openHtml('emporiobelezachic')">
-        <img src="/meuProjeto/logos/emporiobelezachic.gif" alt="emporiobelezachic">
+        <img src="logos/emporiobelezachic.gif" alt="emporiobelezachic">
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('cdm')">
-        <img src="/meuProjeto/logos/cdm.png" alt="cdm">
+        <img src="logos/cdm.png" alt="cdm">
         <p>cdm2</p>
     </div>
     <div class="item" onclick="openHtml('evc')">
-        <img src="/meuProjeto/logos/evc.png" alt="evc">
+        <img src="logos/evc.png" alt="evc">
         <p>evc</p>
     </div>
     <div class="item" onclick="openHtml('pepearcondicionado')">
-        <img src="/meuProjeto/logos/pepearcondicionado.png" alt="pepearcondicionado">
+        <img src="logos/pepearcondicionado.png" alt="pepearcondicionado">
         <p>pepearcondicionado</p>
     </div>
 </div>
@@ -80,7 +80,7 @@
 
 <script>
     function openHtml(productName) {
-        window.open('/meuProjeto/' + productName + '.html', '_blank');
+        window.open(productName + '.html', '_blank');
     }
 
     function toggleDarkMode() {
