--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -7,45 +7,22 @@
 </head>
 <body>
     <h1>Empório Beleza Chic</h1>
-    <div id="imageContainer"></div>
-
-    <script>
-        // Diretório onde estão as imagens
-        const diretorioImagens = "emporiorbelezachic";
-
-        // Função para carregar as imagens
-        function carregarImagens() {
-            const container = document.getElementById("imageContainer");
+    <div id="imageContainer">
+        <?php
+            // Diretório onde estão as imagens
+            $diretorioImagens = "emporiorbelezachic";
 
             // Obtendo a lista de arquivos no diretório
-            fetch(`./${diretorioImagens}/`)
-                .then(response => response.text())
-                .then(data => {
-                    const parser = new DOMParser();
-                    const doc = parser.parseFromString(data, "text/html");
-                    const imagens = doc.querySelectorAll("a");
+            $arquivos = glob("$diretorioImagens/*.{jpeg,jpg,gif,png}", GLOB_BRACE);
 
-                    if (imagens.length === 0) {
-                        console.error("Nenhuma imagem encontrada no diretório.");
-                        return;
-                    }
-
-                    imagens.forEach(imagem => {
-                        // Verifica se o item é um arquivo de imagem
-                        const nomeImagem = imagem.textContent.trim();
-                        if (nomeImagem.match(/\.(jpeg|jpg|gif|png)$/)) {
-                            const img = document.createElement("img");
-                            img.src = `${diretorioImagens}/${nomeImagem}`;
-                            img.alt = "Imagem";
-                            container.appendChild(img);
-                        }
-                    });
-                })
-                .catch(error => console.error('Erro ao carregar imagens:', error));
-        }
-
-        // Carregar as imagens ao carregar a página
-        window.onload = carregarImagens;
-    </script>
+            if (count($arquivos) === 0) {
+                echo "<p>Nenhuma imagem encontrada no diretório.</p>";
+            } else {
+                foreach ($arquivos as $imagem) {
+                    echo '<img src="' . $imagem . '" alt="Imagem">';
+                }
+            }
+        ?>
+    </div>
 </body>
 </html>
