--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -11,7 +11,7 @@
 
     <script>
         // Diretório onde estão as imagens
-        const diretorioImagens = "emporiorbelezachic";
+        const diretorioImagens = "/lojas/emporiobelezachic/";
 
         // Função para carregar as imagens
         function carregarImagens() {
