--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -11,7 +11,7 @@
 
     <script>
         // Diretório onde estão as imagens
-        const diretorioImagens = "lojas/emporiobelezachic";
+        const diretorioImagens = "todaslojas/emporiobelezachic";
 
         // Lista de imagens
         const imagens = [
